--- a/MA615_GroupAssignment.Rmd
+++ b/MA615_GroupAssignment.Rmd
@@ -9,31 +9,27 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-Onion data
-```{r}
-library(readxl)
-Onions <- read.csv("Data.csv")
-Onions$Week.Ending <-NULL
-Onions$State.ANSI <-NULL
-Onions$Ag.District <-NULL
-Onions$Ag.District.Code <-NULL
-Onions$County <-NULL
-Onions$County.ANSI <-NULL
-Onions$Zip.Code <-NULL
-Onions$Region <-NULL
-Onions$Watershed <-NULL
-Onions$watershed_code <-NULL
-Onions$Week.Ending <-NULL
-View(Onions)
-summary(Onions)
-head(Onions)
-```
-
-Finance data
+### Data Cleaning
 ```{r}
 library(readxl)
 Finance <- read.csv("SARStats.csv")
-View(Finance)
+#View(Finance)
 summary(Finance)
 head(Finance)
+
+Finance <- filter(Finance, !(str_detect(string = Finance$State,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Industry,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Product,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Instrument,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Suspicious.Activity,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Regulator,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Year.Month,pattern = "\\[Total\\]")))
+
+summary(Finance)
 ```
+
+### 
+```{r}
+
+```
+
