--- a/MA615_GroupAssignment.Rmd
+++ b/MA615_GroupAssignment.Rmd
@@ -1,22 +1,29 @@
 ---
 title: "MA615_GroupAssignment"
-output: pdf_document
+author: "Bingqing Yu , Mira Tang , Kecheng Liang , Chaoqun Yin"
+date: "September 30, 2018"
+output:
+  html_document:
+    df_print: paged
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(knitr)
+library(tidyverse)
+library(readxl)
+library(kableExtra)
 ```
 
-## R Markdown
-
-### Data Cleaning
+## Data Cleaning
 ```{r}
-library(readxl)
+#Import data
 Finance <- read.csv("SARStats.csv")
 #View(Finance)
 summary(Finance)
-head(Finance)
 
+#Eliminate meaningless data
 Finance <- filter(Finance, !(str_detect(string = Finance$State,pattern = "\\[Total\\]")))
 Finance <- filter(Finance, !(str_detect(string = Finance$Industry,pattern = "\\[Total\\]")))
 Finance <- filter(Finance, !(str_detect(string = Finance$Product,pattern = "\\[Total\\]")))
@@ -24,12 +31,126 @@ Finance <- filter(Finance, !(str_detect(string = Finance$Instrument,pattern = "\
 Finance <- filter(Finance, !(str_detect(string = Finance$Suspicious.Activity,pattern = "\\[Total\\]")))
 Finance <- filter(Finance, !(str_detect(string = Finance$Regulator,pattern = "\\[Total\\]")))
 Finance <- filter(Finance, !(str_detect(string = Finance$Year.Month,pattern = "\\[Total\\]")))
+Finance <- filter(Finance, !(str_detect(string = Finance$Year.Month,pattern = "\\[Not\\ Applicable\\]")))
 
-summary(Finance)
+#Transform the type of data
+Finance$Count <- as.numeric(Finance$Count)
+
 ```
 
-### 
+##EDA
+### State
 ```{r}
-
+Finance %>% 
+  filter(State %in% Finance$State) %>% 
+  group_by(Year.Month , State) %>% 
+  summarise(Total_Count = sum(as.numeric(Count))) %>% 
+  arrange(Year.Month,desc(Total_Count)) %>% 
+  slice(1:5) -> Finance3
 ```
 
+#### Make a table
+```{r}
+kable(Finance3[,c(2,3)], "html", caption = "Top five States each year") %>%
+  kable_styling("striped", full_width = T) %>%
+  group_rows("2012", 1, 5) %>%
+  group_rows("2013", 6, 10) %>% 
+  group_rows("2014", 11, 15) %>%
+  group_rows("2015", 16, 20) %>%
+  group_rows("2016", 21, 25) %>%
+  group_rows("2017", 26, 30) %>%
+  group_rows("2018", 31, 35)
+```
+
+#### Make a plot
+```{r}
+ggplot(Finance3,aes(x = Year.Month,y = Total_Count,fill = State))+
+  geom_bar(stat = 'identity',position = 'stack') +
+  labs(title = "Bingqing Yu")
+```
+
+### Industry
+```{r}
+Finance %>% group_by(Year.Month,Industry)  %>%  
+  summarize(Count = sum(Count)) %>%
+  arrange(Year.Month,desc(Count)) -> Finance.ind
+```
+
+#### Make a table
+```{r}
+kable(Finance.ind[,c(2,3)], caption = "Securities/Futures Suspicious Activity Reports by Industry" , "html" ) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed")) %>%
+  group_rows("2012", 1, 3) %>%
+  group_rows("2013", 4, 6) %>%
+  group_rows("2014", 7, 10) %>%
+  group_rows("2015", 11, 14) %>%
+  group_rows("2016", 15, 18) %>%
+  group_rows("2017", 19, 22) %>%
+  group_rows("2018", 23, 26)
+```
+
+#### Make a plot
+```{r}
+ggplot(Finance.ind,aes(x = Year.Month , Count ,fill = Industry)) +
+  geom_bar(stat = "identity",position = "fill",width = 0.8) +
+  coord_polar(theta = "x") +
+  labs(title = "Mira Tang")
+```
+We can know from the plot that MSB is the most frequent industry reported securities/futures suspicious activity in each year. Although insurance company's suspicious activities happend a lot in 2012, it decreased by year.
+
+### Susicious Activities
+```{r}
+#Select some useful columns from the database
+suspicion <- select(Finance, Year.Month, Suspicious.Activity, Count)
+
+# Change the column's name
+colnames(suspicion)[1] <- "Year"
+suspicion %>%
+  group_by(Year, Suspicious.Activity) %>%
+  summarize(Count = sum(Count)) %>%
+  arrange(Year, desc(Count)) %>%
+  slice(1:5) -> sus.table
+```
+
+#### Make a table
+```{r}
+kable(sus.table, caption = "Top 5 Reported Susicious Activities by Years") %>%
+  kable_styling(bootstrap_options = c("striped") )
+```
+
+#### Make a plot
+```{r}
+ggplot(suspicion, aes(x = Year, y = Count, fill = Suspicious.Activity)) +
+  geom_col(position = "stack") +
+  labs(title = "Kecheng Liang")
+```
+The graph shows that we should pay more attetion on wire, credit/debit card, and check.
+
+### Regulator
+```{r}
+#Seclect the columns for analysis
+regulator <- select(Finance, Year.Month, Regulator, Count)
+
+#Change the name of the years
+colnames(regulator)[1]<-"Year"
+```
+
+#### Make a table
+```{r}
+regulator %>% group_by(Year,Regulator) %>% 
+  summarize(Count=sum(Count)) %>% 
+  arrange(Year,desc(Count)) %>%
+  slice(1:3)-> sus.table
+
+kable(sus.table, caption = "Top 3 Regulators against Criminal") %>%
+  kable_styling(bootstrap_options = c("striped") )
+```
+
+#### Make a plot
+```{r}
+ggplot(regulator , aes(x = Year,y = Count,fill = Regulator)) + 
+  geom_col(position = "stack") + 
+  labs(title = "Chaoqun Yin")
+```
+
+From the plot, the most financial criminal cases are handled by IRS and SEC.
