--- a/MA615_GroupAssignment.Rmd
+++ b/MA615_GroupAssignment.Rmd
@@ -10,10 +10,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(knitr)
-library(tidyverse)
-library(readxl)
-library(kableExtra)
+pacman::p_load("knitr","tidyverse","readxl","kableExtra","ggplot2","maps")
 ```
 
 We got the dataset from the [Suspicious Activities Report statistics](https://www.fincen.gov/reports/sar-stats) tool. After filtering specific industries (Insurance Company, Loan or Finance Company, Money Services BUsiness and Securities/Futures) and suspicious activities(Fraud), we got a dataset with 43454 observations of 8 variables. Looking into the data, we found that observations with "[Total]" entries were summarized data that should be seprated from raw data, so we removed those entires and ended with 23890 observations.
@@ -52,8 +49,6 @@ Finance %>%
   group_by(Year,State) %>% 
   summarise(State_Total_Count = sum(as.numeric(Count)))-> State1
 
-library(ggplot2)
-library(maps)
 #load us map data
 all_states <- map_data("state")
 
