--- a/MA615_GroupAssignment.Rmd
+++ b/MA615_GroupAssignment.Rmd
@@ -79,7 +79,7 @@ ggplot(State1, aes(x=Year, y=State_Total_Count))+
   geom_boxplot()+
   coord_flip()
 ```
-
+From the boxplot, we can compare the numbers of fraud cases from 2012 to 2018 easily. From 2012 to 2017, the total number of fraud cases has a obvious trend of increasing. 
 
 
 #### Make a table
@@ -171,12 +171,13 @@ ggplot(suspicion, aes(x = Year, y = Count, fill = Suspicious.Activity)) +
 The graph shows that we should pay more attetion on wire, credit/debit card, and check.
 
 ### Regulator
-```{r}
-#Seclect the columns for analysis
+```{r,message=FALSE}
+#Seclect specific olumns for analysis
 regulator <- select(Finance, Year, Regulator, Count)
 
-#Change the name of the years
-colnames(regulator)[1]<-"Year"
+#More data cleaning eliminating "Not Applicable"
+regulator$Regulator <- str_replace_all(regulator$Regulator, fixed(" "), "")
+regulator <- filter(regulator, !str_detect(string = regulator$Regulator,"NotApplicable"))
 ```
 
 #### Make a table
@@ -186,15 +187,32 @@ regulator %>% group_by(Year,Regulator) %>%
   arrange(Year,desc(Count)) %>%
   slice(1:3)-> sus.table
 
-kable(sus.table, caption = "Top 3 Regulators against Criminal") %>%
+kable(sus.table, caption = "Top 3 Regulators against Criminal Each Year") %>%
   kable_styling(bootstrap_options = c("striped") )
 ```
 
-#### Make a plot
+#### Make a plot of the regulators vs. fraud case count
 ```{r}
 ggplot(regulator , aes(x = Year,y = Count,fill = Regulator)) + 
   geom_col(position = "stack") + 
-  labs(title = "Chaoqun Yin")
+  labs(title = "The regulators vs. Fraud case count - Chaoqun Yin")
 ```
 
-From the plot, the most financial criminal cases are handled by IRS and SEC.
+From the plot, the fraud cases charged by IRS increase greatly from 2012 to 2016. Then in 2016, the fraud cases charged by IRS get to the peek then the numbers started to decrease. Among all the data points in the plot, the most financial criminal cases are handled by IRS and SEC during the 7 years.
+
+##Conclusion
+* As for the numbers of fraud cases in different states:
+From the American map based the number of fraud cases, we can see that Texas state, California state and New York have more fraud cases in 2017 than any other states. It is an intuitionistic and vivid visualization to show the results.
+
+Then, from the boxplot, we can compare the numbers of fraud cases from 2012 to 2018 easily. From 2012 to 2017, the total number of fraud cases has a obvious trend of increasing. 
+
+At last, the count of frauds reported increased largely through the last few years. Since the data of 2018 has not been complete yet, we may still predict a trend of growth. California and New York were typically among the top five States that most frauds were reported. Massachusetts ranked first in 2013 and 2014, but ended with fifth in 2015, 2016 and 2017.
+
+* As for the fraud cases reported in different industries:
+We can know from the plot that MSB is the most frequent industry reported securities/futures suspicious activity in each year. Although insurance company's suspicious activities happend a lot in 2012, it decreased by year.
+
+* As for the suspicious activity type of fraud cases:
+The wire, mail and debit/credit card are often used by criminals to make fraud. And from the plot we can see that ACH type are used more frequently recent years, so we can predict that it will continue increasing in 2018. We should be caucious about this new kind of financial derivatives.
+
+* As the regulators against the fraud actions:
+The fraud cases charged by IRS increase greatly from 2012 to 2016. Then in 2016, the fraud cases charged by IRS get to the peek then the numbers started to decrease. It is suggested by the plot that FRB plays more and more important role in the recent years against fraud criminals. Among all the data points in the plot, the most financial criminal cases are handled by IRS, SEC and FRB during the 7 years from 2012 to 2018. 
